RESOLVED FIXED42568
[Chromium] Fix style errors of RenderThemeChromiumWin.cpp
https://bugs.webkit.org/show_bug.cgi?id=42568
Summary [Chromium] Fix style errors of RenderThemeChromiumWin.cpp
Kent Tamura
Reported 2010-07-19 08:04:07 PDT
[Chromium] Fix style errors of RenderThemeChromiumWin.cpp
Attachments
Patch (9.18 KB, patch)
2010-07-19 08:04 PDT, Kent Tamura
no flags
Patch (10.54 KB, patch)
2010-07-19 08:08 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-07-19 08:04:26 PDT
WebKit Review Bot
Comment 2 2010-07-19 08:05:20 PDT
Attachment 61954 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/rendering/RenderThemeChromiumWin.cpp:192: Use 0 instead of NULL. [readability/null] [4] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kent Tamura
Comment 3 2010-07-19 08:08:25 PDT
WebKit Review Bot
Comment 4 2010-07-19 08:10:13 PDT
Attachment 61955 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/rendering/RenderThemeChromiumWin.cpp:192: Use 0 instead of NULL. [readability/null] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Shinichiro Hamaji
Comment 5 2010-07-19 08:47:48 PDT
Comment on attachment 61955 [details] Patch Looks good. We need to fix Bug 34605 though.
Kent Tamura
Comment 6 2010-07-19 21:33:59 PDT
Comment on attachment 61955 [details] Patch Clearing flags on attachment: 61955 Committed r63718: <http://trac.webkit.org/changeset/63718>
Kent Tamura
Comment 7 2010-07-19 21:34:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.